--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,7 +58,7 @@
         padding: 0%;
     }
 
-    .site-main .subscribe-us-area .subscribe form .input-textbox input{
+    .site-main .subscribe-us-area .subscribe form .input-textbox input, .site-main .subscribe-us-area .subscribe form .input-textbox textarea{
         width: 20rem;
         margin: 5%;
     }
